# ai-ethics-multiagents

./: .env.example  .gitignore  main.py  pyproject.toml  test.py
data/raw/: ai_risk_database_v3.csv  incidents.csv
src/: agents_graph copy.py  agents_graph.py  main.py
src/agents/: incident_agent.py  risk_agent.py
src/services/: ai_risk_etl_service.py  incidents_etl_service.py  incidents_reports_etl_service.py  proprietary_framework_etl_service.py  retrieval_service.py  vector_store_service.py
src/tools/rags/: incidents_rag.py  risk_rag.py
